--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ button {
 .header-container {
   display: flex;
   justify-content: space-between;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-navigation {
