--- a/css/styles.css
+++ b/css/styles.css
@@ -53,10 +53,13 @@ button {
   color: #2e2f42;
 }
 
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
 .header-container {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-navigation {
@@ -66,6 +69,7 @@ button {
 .nav-menu {
   display: flex;
   gap: 40px;
+  align-items: center;
 }
 
 .nav-menu .nav-menu-item {
