--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ button {
 
 .hero-section {
   background-color: #2e2f42;
+  padding-bottom: 188px;
 }
 
 .hero-phrase {
@@ -133,14 +134,10 @@ button {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
-  width: 496px;
+  max-width: 496px;
   padding-top: 188px;
   padding-bottom: 48px;
   margin: 0 auto;
-}
-
-.hero-container {
-  padding-bottom: 188px;
 }
 
 .order-btn {
