--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ button {
 
 .hero-section {
   background-color: #2e2f42;
-  padding-bottom: 188px;
+  padding: 188px 0;
 }
 
 .hero-phrase {
@@ -134,8 +134,7 @@ button {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
-  width: 496px;
-  padding-top: 188px;
+  max-width: 496px;
   padding-bottom: 48px;
   margin: 0 auto;
 }
