--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,17 @@ button {
   flex-basis: calc((100% - 72px) / 4);
 }
 
+.advantage-name {
+  font-weight: 500;
+  font-size: 20px;
+
+  /* line-height: 24px; */
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
