--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,7 @@ button {
 
 .footer {
   background-color: #2e2f42;
-  padding-bottom: 100px;
+  padding: 100px 0;
 }
 
 .logo-footer {
@@ -316,12 +316,7 @@ button {
   text-transform: uppercase;
   color: #4d5ae5;
   display: inline-block;
-  margin-top: 101.5px;
   margin-bottom: 16px;
-}
-
-.footer-container {
-  width: 264px;
 }
 
 .accent-footer {
@@ -336,6 +331,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
 }
 
 .container {
